# mAb

./: .env.example  .gitignore  .marimo.toml  AGENT_ROSTER.md  ARCHITECTURE.md  CHANGELOG.md  DATA_SOURCES.md  DECISION_LOG.md  HYPOTHESIS_LOG.md  README.md  RESEARCH_PLAN.md  pyproject.toml
.config/databases/: neo4j.yaml  qdrant.yaml
.config/llm/: model_registry.json
.config/llm/profiles/: data_analysis.json  deep_reasoning.json  hypothesis_gen.json  literature_review.json  scientific_writing.json
.config/mcp/: arsenal.env  mcp_registry.json  run-embedding.sh  run-logseq.sh  run-rss-reader.sh
agents/personas/immunologists/: README.md
agents/personas/structural_biologists/: README.md
architecture/00_platform/: MCP_LAYER.md  ONBOARDING.md  STRUCTURE.md
architecture/01_research/: METHODOLOGY.md  VISION.md
architecture/03_knowledge/: EMBEDDING_STRATEGY.md  GRAPH_SCHEMA.md
architecture/04_agents/: AGENT_FRAMEWORK.md  COLLABORATION_PATTERNS.md  PERSONA_DESIGN.md
architecture/05_technology/: INFRASTRUCTURE.md  MCP_ARCHITECTURE.md  TOOL_REGISTRY.md
code/marimo/: explore.py
knowledge/graphs/epitope_map/: README.md
knowledge/logseq/logseq/: config.edn
